--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^3.0.1",
     "prop-types": "^15.8.1",
